# rm-2021-Code-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.txt
.github/workflows/: cmake.yml
base/: connector.cpp  connector.h  connector.hpp
devices/camera/: mv_camera_param.h  rm_video_capture.cpp
devices/serial/: abstract_serial_port.h  rm_serial_port.cpp  rm_serial_port.h
docs/: module_roi_design_doc.md
drvices/camera/: RM_VideoCapture.cpp  RM_VideoCapture.h  rm_video_capture.cpp
drvices/serial/: Abstract_SerialPort.h  RM_SerialPort.cpp  RM_SerialPort.h  abstract_serial_port.h  rm_serial_port.cpp  rm_serial_port.h
module/angle_solve/: RM_SolvePNP.cpp  RM_SolvePNP.h  abstract_solve_pnp.hpp  rm_solve_pnp.cpp  rm_solve_pnp.h  rm_solve_pnp.hpp
module/armor/: RM_ArmorDetection.cpp  RM_ArmorDetection.h  armor_config.xml  rm_armor_detection.cpp  rm_armor_detection.h
module/buff/: RM_BuffDetection.cpp  RM_BuffDetection.h  rm_buff_detection.cpp  rm_buff_detection.h
module/filter/: RM_KalmanFilter.cpp  RM_KalmanFilter.h  rm_kalman_filter.cpp  rm_kalman_filter.h
module/object_detection/: Abstract_NN_Module.h  Abstract_ObjectDetection.h  RM_DNN_Yolov4.cpp  RM_DNN_Yolov4.h  RM_ObjectDetection.cpp  RM_ObjectDetection.h  abstract_nn_module.h  rm_dnn_yolov4.cpp  rm_dnn_yolov4.h
module/roi/: RM_ROI.cpp  RM_ROI.h  rm_roi.cpp  rm_roi.h
scripts/: autoconfig.sh  cpplint-pre-commit.sh
test/: CMakeLists.txt  test_camera.cpp
user/: main.cpp
